--- a/Rizum-OpenClash.ini
+++ b/Rizum-OpenClash.ini
@@ -1,109 +1,130 @@
-# ============================
-# OpenClash 全注释配置文件
-# 版本：v4.1
-# ============================
+# =====================
+# 基础全局配置
+# =====================
+port: 7890                     # HTTP代理端口
+socks-port: 7891               # SOCKS5代理端口
+allow-lan: true                # 允许局域网连接
+mode: Rule                     # 规则模式
+log-level: info                # 日志级别
+external-controller: 0.0.0.0:9090  # 控制台访问地址
+ipv6: true                     # 启用IPv6支持
 
-# 基础网络配置
-mixed-port: 7890          # 混合代理端口 (HTTP/SOCKS5 共用)
-redir-port: 7892          # 透明代理端口 (用于 iptables 重定向)
-tproxy-port: 7893         # TProxy 透明代理端口 (支持 UDP)
-allow-lan: true           # 允许局域网设备连接代理
-mode: Rule                # 使用规则分流模式 (可选 Global/Rule/Direct)
-log-level: warning        # 日志级别 (silent/error/warning/info/debug)
-external-controller: 0.0.0.0:9090  # RESTful API 监听地址 (管理面板使用)
-secret: "your_password"   # API 访问密钥 (建议使用强密码)
-ipv6: true                # 启用 IPv6 双栈支持
-geodata-mode: true        # 使用新版 GeoIP 数据库格式
-
-# DNS 系统配置 (防止污染)
-dns:
-  enable: true            # 启用自定义 DNS 服务器
-  listen: 0.0.0.0:1053    # DNS 服务监听端口
-  ipv6: true              # 响应 IPv6 DNS 查询
-  enhanced-mode: fake-ip  # 使用 Fake-IP 模式提升响应速度
-  fake-ip-range: 198.18.0.1/16  # Fake-IP 地址池 (避免与真实 IP 冲突)
-  default-nameserver:     # 初始 DNS 服务器 (用于解析 nameserver 域名)
-    - 223.5.5.5           # 阿里公共 DNS
-    - 2400:3200::1        # 阿里 IPv6 DNS
-  nameserver:             # 常规 DNS 服务器 (按顺序查询)
-    - https://doh.pub/dns-query  # 腾讯 DoH (加密 DNS)
-    - tls://dns.alidns.com:853   # 阿里 DoT (加密 DNS)
-  fallback-filter:        # 回退过滤规则
-    geoip: true           # 非中国 IP 使用 fallback
-    ipcidr:               # IP 段过滤规则
-      - 240.0.0.0/4       # 过滤非常规 IP 段
-
-# 订阅源配置 (需用户替换 SUB_URL)
+# =====================
+# 节点订阅配置
+# =====================
 proxy-providers:
-  main_sub:               # 订阅源名称
-    type: http            # 订阅类型 (http/file)
-    url: "SUB_URL"        # 订阅链接 (需用户填写)
-    path: ./subs/main.yaml  # 本地存储路径
-    interval: 43200       # 更新间隔 (秒，12 小时)
-    filter: "香港|台湾|回国|(?i)hk|tw|cn"  # 正则过滤节点名称
-    health-check:         # 节点健康检查
-      enable: true        # 启用自动检测
-      interval: 300       # 检查间隔 (5 分钟)
-      url: http://connect.rom.miui.com/generate_204  # 检测地址 (国内可达)
+  MyAirport:
+    type: http
+    url: "{{SUB_URL}}"  # 替换为您的HTTPS订阅地址
+    path: ./providers/airport.yaml
+    interval: 86400            # 24小时更新一次
+    health-check:
+      enable: true
+      interval: 600            # 10分钟健康检查
+      url: https://www.gstatic.com/generate_204  # HTTPS检查地址
 
-# 代理策略组架构
+# =====================
+# 策略组配置
+# =====================
 proxy-groups:
-  - name: "🚀 智能优选"    # 策略组显示名称
-    type: url-test        # 类型：延迟测试 (自动选择最低延迟节点)
-    url: http://www.qualcomm.cn/generate_204  # 测试地址 (国内服务器)
-    interval: 300         # 测试间隔 (5 分钟)
-    tolerance: 50         # 允许延迟差 (单位 ms，50ms 内不切换)
-    use: [main_sub]       # 使用订阅源中的节点
-  
-  - name: "📺 哔哩专线"    # 流媒体专用组
-    type: select          # 类型：手动选择
-    proxies:              # 可用节点列表
-      - "🚀 智能优选"      # 首选智能优选节点
-      - DIRECT            # 备选直连
-  
-  - name: "🎮 VR通道"          # 策略组名称 (显示在控制面板)
-    type: url-test           # 类型：自动选择延迟最低节点
-    url: http://www.qualcomm.cn/generate_204  # 测试地址 (国内可达性检测)
-    interval: 300            # 测试间隔 300 秒 (5 分钟)
-    tolerance: 50            # 允许 50ms 延迟差 (波动小于此值不切换)
-    timeout: 2000            # 超时时间 2000ms (2 秒)
-    use: [main_sub]          # 使用 main_sub 订阅源的节点
-    filter: "香港|(?i)hk"     # 正则过滤香港节点 (中文/英文标识)
-    # proxies:               # 如需手动指定节点可取消注释
-    #   - 香港节点01
-    #   - 香港节点02
+  - name: 🚀 自动代理
+    type: url-test             # 自动选择延迟最低节点
+    url: https://www.gstatic.com/generate_204
+    interval: 300              # 5分钟测试一次
+    proxies:
+      - provider:MyAirport     # 使用机场订阅节点
+    filter: "香港|台湾|回国"    # 仅保留港台和国内节点
 
-# 流量规则系统 (按优先级匹配)
+  - name: 🎵 网易云音乐
+    type: select               # 手动选择代理
+    proxies:
+      - provider:MyAirport     # 从机场订阅选择节点
+      - DIRECT                 # 直连选项
+
+  - name: 📺 国内流媒体
+    type: select
+    proxies:
+      - DIRECT                 # 默认直连
+      - 🚀 自动代理            # 备用代理
+
+  - name: 🎮 VRChat专用
+    type: select
+    proxies:
+      - 🚀 自动代理            # 指定代理节点
+      - DIRECT                 # 直连选项
+
+  - name: 🏠 国内直连
+    type: select
+    proxies:
+      - DIRECT                 # 直连模式
+      - REJECT                 # 拒绝模式
+
+# =====================
+# 规则配置
+# =====================
 rules:
-  # 特殊应用规则 (最高优先级)
-  - DOMAIN,bil.ouo.chat,🎮 VR通道,no-resolve  # 指定域名走 VR 通道，不触发 DNS 解析
-  - DOMAIN-SUFFIX,91vrchat.com,🎮 VR通道      # 匹配所有子域名
-  
-  # 流媒体规则 (次优先级)
-  - DOMAIN-SUFFIX,bilibili.com,📺 哔哩专线    # 主站域名
-  - DOMAIN-KEYWORD,upos,📺 哔哩专线          # CDN 服务器关键字
-  
-  # 国内直连规则 (最后匹配)
-  - GEOIP,CN,DIRECT,no-resolve              # 中国 IP 直连 (不触发解析)
-  - MATCH,🚀 智能优选                       # 剩余流量走智能优选
+  # 优先处理特殊规则
+  - DOMAIN,bil.ouo.chat,🎮 VRChat专用       # VRChat BiliPlayer域名1
+  - DOMAIN,biliplayer.91vrchat.com,🎮 VRChat专用  # VRChat BiliPlayer域名2
 
-# TUN 模式配置 (增强模式)
-tun:
-  enable: true            # 启用 TUN 模式 (需要内核支持)
-  stack: system           # 使用系统协议栈 (gvisor/system)
-  auto-route: true        # 自动设置路由规则
-  auto-detect-interface: true  # 自动检测网络接口
+  # 流媒体规则
+  - DOMAIN-SUFFIX,music.163.com,🎵 网易云音乐  # 网易云单独处理
+  - RULE-SET,bilibili,📺 国内流媒体          # B站全家桶
+  - RULE-SET,douyin,📺 国内流媒体            # 抖音
+  - RULE-SET,kuaishou,📺 国内流媒体          # 快手
+  - RULE-SET,tencentvideo,📺 国内流媒体      # 腾讯视频
 
-# 实验性功能
-experimental:
-  ignore-resolve-fail: true  # 忽略 DNS 解析失败 (防止断流)
-  sniff-tls-sni: true     # 启用 TLS SNI 嗅探 (增强分流精度)
+  # 基础规则
+  - GEOIP,CN,🏠 国内直连                   # 国内IP直连
+  - MATCH,🚀 自动代理                      # 其余流量自动代理
 
-# 规则集自动更新
+# =====================
+# 规则订阅配置
+# =====================
 rule-providers:
-  streaming_cn:           # 国内流媒体规则集
-    type: http            # 远程获取类型
-    behavior: domain      # 匹配域名类型规则
-    url: https://cdn.jsdelivr.net/gh/DivineEngine/Profiles@master/Clash/RuleSet/StreamingMedia/StreamingCN.yaml
-    path: ./rulesets/streaming_cn.yaml  # 本地存储路径
-    interval: 86400       # 每天自动更新
+  bilibili:
+    type: http
+    behavior: domain
+    url: "https://cdn.jsdelivr.net/gh/DivineEngine/Profiles@master/Clash/RuleSet/StreamingMedia/Video/bilibili.yaml"
+    path: ./rules/bilibili.yaml
+    interval: 86400
+
+  douyin:
+    type: http
+    behavior: domain
+    url: "https://cdn.jsdelivr.net/gh/DivineEngine/Profiles@master/Clash/RuleSet/StreamingMedia/Video/TikTok.yaml"
+    path: ./rules/douyin.yaml
+    interval: 86400
+
+  kuaishou:
+    type: http
+    behavior: domain
+    url: "https://cdn.jsdelivr.net/gh/DivineEngine/Profiles@master/Clash/RuleSet/StreamingMedia/Video/Kuaishou.yaml"
+    path: ./rules/kuaishou.yaml
+    interval: 86400
+
+  tencentvideo:
+    type: http
+    behavior: domain
+    url: "https://cdn.jsdelivr.net/gh/DivineEngine/Profiles@master/Clash/RuleSet/StreamingMedia/Video/腾讯视频.yaml"
+    path: ./rules/tencentvideo.yaml
+    interval: 86400
+
+# =====================
+# DNS 配置
+# =====================
+dns:
+  enable: true
+  ipv6: true                   # 启用IPv6解析
+  listen: 0.0.0.0:53
+  enhanced-mode: fake-ip
+  nameserver:
+    - https://dns.alidns.com/dns-query  # 阿里DNS DoH
+    - https://doh.pub/dns-query         # 腾讯DNS DoH
+  fallback:
+    - tls://8.8.8.8:853        # Google DNS
+    - tls://1.1.1.1:853        # Cloudflare DNS
+  fallback-filter:
+    geoip: true
+    ipcidr:
+      - 240.0.0.0/4
