--- a/Rizum-OpenClash.ini
+++ b/Rizum-OpenClash.ini
@@ -1,130 +1,28 @@
-# =====================
-# 基础全局配置
-# =====================
-port: 7890                     # HTTP代理端口
-socks-port: 7891               # SOCKS5代理端口
-allow-lan: true                # 允许局域网连接
-mode: Rule                     # 规则模式
-log-level: info                # 日志级别
-external-controller: 0.0.0.0:9090  # 控制台访问地址
-ipv6: true                     # 启用IPv6支持
+;1、域名组
+ruleset=🕹️ VRchat视频解析,https://raw.githubusercontent.com/jiudaimu/Rizum-OpenClash/refs/heads/main/vrc-shipingjiexi.list
+ruleset=📺 blibli视频,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/bilibili.list
+ruleset=📺 blibli视频,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/bilibili2.list
+ruleset=🎧 音乐,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/applemusic.list
+ruleset=➡️ 国内,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/cn.list
+ruleset=➡️ 国内,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/cn.list
+ruleset=🌍 国外,[]FINAL
 
-# =====================
-# 节点订阅配置
-# =====================
-proxy-providers:
-  MyAirport:
-    type: http
-    url: "{{SUB_URL}}"  # 替换为您的HTTPS订阅地址
-    path: ./providers/airport.yaml
-    interval: 86400            # 24小时更新一次
-    health-check:
-      enable: true
-      interval: 600            # 10分钟健康检查
-      url: https://www.gstatic.com/generate_204  # HTTPS检查地址
+;2、策略组（域名组-节点组）
+custom_proxy_group=🕹️ VRchat视频解析`select`[]大陆-自动`[]香港-自动`[]台湾-自动`[]DIRECT`[]所有-手动`[]所有-自动`[]其他-自动`[]REJECT
+custom_proxy_group=📺 blibli视频`select`[]大陆-自动`[]香港-自动`[]台湾-自动`[]DIRECT`[]所有-手动`[]所有-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🎧 音乐`select`[]大陆-自动`[]香港-自动`[]台湾-自动`[]DIRECT`[]所有-手动`[]所有-自动`[]其他-自动`[]REJECT
+custom_proxy_group=➡️ 国内`select`[]大陆-自动`[]香港-自动`[]台湾-自动`[]DIRECT`[]所有-手动`[]所有-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🌍 国外`select`[]DIRECT`[]香港-自动`[]台湾-自动`[]DIRECT`[]大陆-自动`[]所有-手动`[]所有-自动`[]其他-自动`[]REJECT
 
-# =====================
-# 策略组配置
-# =====================
-proxy-groups:
-  - name: 🚀 自动代理
-    type: url-test             # 自动选择延迟最低节点
-    url: https://www.gstatic.com/generate_204
-    interval: 300              # 5分钟测试一次
-    proxies:
-      - provider:MyAirport     # 使用机场订阅节点
-    filter: "香港|台湾|回国"    # 仅保留港台和国内节点
+;3、节点组
+custom_proxy_group=所有-手动`select`.*
+custom_proxy_group=所有-自动`url-test`.*`http://connect.rom.miui.com/generate_204`180,5,100
+custom_proxy_group=香港-自动`url-test`(广港|香港|HK|Hong Kong|🇭🇰|HongKong)`http://connect.rom.miui.com/generate_204`180,5,100
+custom_proxy_group=台湾-自动`url-test`(广台|台湾|台灣|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan)`http://connect.rom.miui.com/generate_204`180,5,100
+custom_proxy_group=大陆-自动`url-test`(大陆|DW|回国|China)`http://connect.rom.miui.com/generate_204`180,5,100
+custom_proxy_group=其他-自动`url-test`(波|柬|尼|也|克|比|尔|立|冰|秘|耳|利|埃|希|孟|芬|愛|澳|英|德|南|意|法|拿|墨|印|越|俄|瑞|智|荷|比|巴|沙|班|泰|德|烏|以|大陆|DW|回国|China|Australia|Konghwaguk)`http://connect.rom.miui.com/generate_204`180,5,100
 
-  - name: 🎵 网易云音乐
-    type: select               # 手动选择代理
-    proxies:
-      - provider:MyAirport     # 从机场订阅选择节点
-      - DIRECT                 # 直连选项
+;4、启用规则集
+enable_rule_generator=true
+overwrite_original_rules=true
 
-  - name: 📺 国内流媒体
-    type: select
-    proxies:
-      - DIRECT                 # 默认直连
-      - 🚀 自动代理            # 备用代理
-
-  - name: 🎮 VRChat专用
-    type: select
-    proxies:
-      - 🚀 自动代理            # 指定代理节点
-      - DIRECT                 # 直连选项
-
-  - name: 🏠 国内直连
-    type: select
-    proxies:
-      - DIRECT                 # 直连模式
-      - REJECT                 # 拒绝模式
-
-# =====================
-# 规则配置
-# =====================
-rules:
-  # 优先处理特殊规则
-  - DOMAIN,bil.ouo.chat,🎮 VRChat专用       # VRChat BiliPlayer域名1
-  - DOMAIN,biliplayer.91vrchat.com,🎮 VRChat专用  # VRChat BiliPlayer域名2
-
-  # 流媒体规则
-  - DOMAIN-SUFFIX,music.163.com,🎵 网易云音乐  # 网易云单独处理
-  - RULE-SET,bilibili,📺 国内流媒体          # B站全家桶
-  - RULE-SET,douyin,📺 国内流媒体            # 抖音
-  - RULE-SET,kuaishou,📺 国内流媒体          # 快手
-  - RULE-SET,tencentvideo,📺 国内流媒体      # 腾讯视频
-
-  # 基础规则
-  - GEOIP,CN,🏠 国内直连                   # 国内IP直连
-  - MATCH,🚀 自动代理                      # 其余流量自动代理
-
-# =====================
-# 规则订阅配置
-# =====================
-rule-providers:
-  bilibili:
-    type: http
-    behavior: domain
-    url: "https://cdn.jsdelivr.net/gh/DivineEngine/Profiles@master/Clash/RuleSet/StreamingMedia/Video/bilibili.yaml"
-    path: ./rules/bilibili.yaml
-    interval: 86400
-
-  douyin:
-    type: http
-    behavior: domain
-    url: "https://cdn.jsdelivr.net/gh/DivineEngine/Profiles@master/Clash/RuleSet/StreamingMedia/Video/TikTok.yaml"
-    path: ./rules/douyin.yaml
-    interval: 86400
-
-  kuaishou:
-    type: http
-    behavior: domain
-    url: "https://cdn.jsdelivr.net/gh/DivineEngine/Profiles@master/Clash/RuleSet/StreamingMedia/Video/Kuaishou.yaml"
-    path: ./rules/kuaishou.yaml
-    interval: 86400
-
-  tencentvideo:
-    type: http
-    behavior: domain
-    url: "https://cdn.jsdelivr.net/gh/DivineEngine/Profiles@master/Clash/RuleSet/StreamingMedia/Video/腾讯视频.yaml"
-    path: ./rules/tencentvideo.yaml
-    interval: 86400
-
-# =====================
-# DNS 配置
-# =====================
-dns:
-  enable: true
-  ipv6: true                   # 启用IPv6解析
-  listen: 0.0.0.0:53
-  enhanced-mode: fake-ip
-  nameserver:
-    - https://dns.alidns.com/dns-query  # 阿里DNS DoH
-    - https://doh.pub/dns-query         # 腾讯DNS DoH
-  fallback:
-    - tls://8.8.8.8:853        # Google DNS
-    - tls://1.1.1.1:853        # Cloudflare DNS
-  fallback-filter:
-    geoip: true
-    ipcidr:
-      - 240.0.0.0/4
